# ascii-draw

./: README.md  ascii-draw-new-palette.cmb  ascii-draw-window.cmb  io.github.nokse22.asciidraw.json  meson.build  python3-emoji.json  python3-pyfiglet.json
.github/: FUNDING.yml  code-of-conduct.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml  snap.yml  spelling.yml
build-aux/: python3-emoji.json  python3-pyfiglet.json
data/: ascii-draw.gresource.xml  io.github.nokse22.asciidraw.desktop.in  io.github.nokse22.asciidraw.gschema.xml  io.github.nokse22.asciidraw.metainfo.xml.in  meson.build  style-dark.css  style.css
data/gtk/: help-overlay.ui
data/icons/: meson.build
data/ui/: canvas.ui  eraser_sidebar.ui  (+10 more)
po/: LINGUAS  POTFILES  ascii-draw.pot  bg.po  hi.po  it.po  meson.build  nb.po  pt_BR.po  ru.po  sr.po  sr@latin.po  template.pot  tr.po  vi.po  zh.po
snap/: snapcraft.yaml
src/: __init__.py  ascii-draw.gresource.xml  ascii-draw.in  canvas.py  canvas.ui  drawing_canvas.py  main.py  meson.build  new_palette_window.py  palette.py  shortcuts-dialog.ui  style-dark.css  style.css  tool.py  window.py  window.ui
src/gtk/: help-overlay.ui
src/lib/: utils.py
src/tools/: __init__.py  arrow.py  eraser.py  filled_rectangle.py  flood_fill.py  freehand.py  freehand_line.py  line.py  picker.py  rectangle.py  select.py  table.py  text.py  tool.py  tree.py
src/ui/: eraser_sidebar.ui  freehand_sidebar.ui  line_sidebar.ui  move_sidebar.ui  new_palette.ui  table_sidebar.ui  text_sidebar.ui  tree_sidebar.ui  unicode_tooltip.ui  window.ui
